[tool.poetry] 
name = "Coconut" 
version = "1.0.0" 
description = "Building BE for Coconut" 
authors = ["Dileep <work.dileepchandra@gmail.com>"] 
 
[tool.poetry.dependencies] 
python = "^3.9.6" 
fastapi = "^0.100.0" 
udicorn = "^0.22.0" 
 
[tool.poetry.dev-dependencies] 
pytest = "^7.0.0" 
pytest-cov = "^4.0.0" 
 
[build-system] 
requires = ["poetry-core>=1.0.0"] 
build-backend = "poetry.core.masonry.api" 
